12-deploying-to-multiple-environments/kustomize/base/api-node/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-node
  namespace: demo-app
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: # POPULATED BY PATCH
      middlewares:
        - name: strip-api-prefixes
      services:
        - kind: Service
          name: api-node
          port: 3000
          scheme: http
